--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "file-saver": "^2.0.5",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
